# gpu_ext

./: .gitignore  .gitmodules  CLAUDE.md  README.md
docs/: README.md  cross_block_prefetch_plan.md  gpu_preempt_kfunc_plan.md  gpu_preempt_kfunc_plan_v2.md  msched_reproduction_plan.md  xcoord_plan.md  (+1 more)
workloads/vllm/: README.md  pyproject.toml  results.csv
workloads/vllm/configs/: serve_bench.py
workloads/vllm/results/: submodule_test_cpu_offload.json  submodule_test_uvm.json  uvm_baseline_results_20251208_020935.json  uvm_baseline_results_20251208_022225.json  uvm_baseline_results_20251208_022631.json  uvm_baseline_results_20251208_023149.json  uvm_baseline_results_20260216_233956.json  uvm_baseline_results_20260216_234528.json  uvm_baseline_results_latest.json  verify_cpu_offload.json  verify_uvm_always_max.json  verify_uvm_baseline.json
workloads/vllm/results/e5_xcoord_stress/: baseline.txt  stress_no_sched.txt  stress_with_sched.txt
workloads/vllm/results/e7_coord_vs_xcoord/: coord_run1.txt  coord_run2.txt  coord_run3.txt  xcoord_run1.txt  xcoord_run2.txt  xcoord_run3.txt
workloads/vllm/results/exp_vllm_rerun/: config_a_baseline.json  config_b_always_max.json  config_c_always_max_cycle_moe.json  config_d_xb_blind.json  config_e_xb_direction.json  config_f_serving_adaptive.json
workloads/vllm/results/exp_vllm_retest_fix/: v1_cpu_offload.json  v2_uvm_baseline.json  v3_always_max_cycle_moe.json
workloads/vllm/results/exp_xb2/: config_b_always_max.json  config_c_blind_xb.json  config_e_faiss_phase.json
workloads/vllm/uvm/: test_uvm_baselines.py
(+433 files in other folders)
